eventcore-macros/tests/ui/tuple_struct.stderr
error: EventCore: #[derive(Command)] only supports structs with named fields
 --> tests/ui/tuple_struct.rs:6:8
  |
6 | struct TupleCommand(#[stream] StreamId);
  |        ^^^^^^^^^^^^
